--- a/templates/rocky/designate.conf
+++ b/templates/rocky/designate.conf
@@ -29,10 +29,12 @@ debug = {{ options.debug }}
 # Which networking API to use, Defaults to neutron
 #network_api = neutron
 
+{% include "parts/section-transport-url" %}
+
 #-----------------------
 # RabbitMQ Config
 #-----------------------
-{% include "parts/section-rabbitmq-oslo" %}
+{% include "parts/section-oslo-messaging-rabbit" %}
 
 ########################
 ## Service Configuration
@@ -78,7 +80,7 @@ workers = {{ options.workers }}
 #threads = 1000
 
 # Enable host request headers
-enable_host_header = {{ options.enable_host_header }}
+enable_host_header = true
 
 # The base uri used in responses
 api_base_uri = '{{ options.external_endpoints.designate_api.url }}'
