--- a/hooks/relations/bind-rndc/interface.yaml
+++ b/hooks/relations/bind-rndc/interface.yaml
@@ -1,3 +1,3 @@
 name: bind-rndc
 summary: Interface for integrating with BIND using RNDC keys
-maintainer: OpenStack Charmers <openstack-dev@lists.openstack.org>
+maintainer: OpenStack Charmers <openstack-discuss@lists.openstack.org>
